# be-rust-axum-note

./: .env  Cargo.toml
src/: main.rs
