[package]
name = "be-rust-axum-note"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
webbrowser = "0.6"
jsonwebtoken = "8.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "mysql","chrono"] }
dotenv = "0.15"
bcrypt = "0.10.1"
chrono = "0.4"